divs added to avoid stretch

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,8 +191,8 @@ table, p, ul { margin-bottom: 2.5rem; }
 .minerals__random .minerals__anchor { display: inline; color: #fff; padding: 6px 24px 5px 24px; }
 .minerals__random .minerals__anchor:hover { color: #384033; }
 
-.mineral__container { background-color: #043f9e; border-radius: 6px; list-style: none; padding: 0; text-align: center; }
-.mineral__name { display: block; width: 100%; margin: 0; font-size: 24px; padding: 10px 0 10px 0; }
+.mineral__container { background-color: #09c7ff; border-radius: 6px; list-style: none; padding: 0; text-align: center; }
+.mineral__name { display: block; width: 100%; margin: 0; font-size: 24px; padding: 10px 0 10px 0; text-align: center;}
 .mineral__image { display: block; margin: 0 auto; border: solid 2px #CAE5D2; }
 .mineral__image-bg { background-color: #ecfaf8; padding: 20px 0; }
 .mineral__caption { font-size: 12px; font-style: italic; padding: 10px 0 0 0; margin: 0; text-align: center; }
